[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "asynchelper"
author = "Mario Nascimento"
author-email = "mario@whitehathacking.tech"
home-page = "https://github.com/darkarp/asynchelper"
classifiers = [ "License :: OSI Approved :: MIT License",]
requires-python = ">=3.7"
description-file = "README.rst"

